--- a/sinature.html
+++ b/sinature.html
@@ -12,17 +12,17 @@
                 <br><span style="color: rgb(231, 34, 24); font-family: Verdana; font-size: 16px;">VP , Global marketing</span>
                 <br>
                 <div style="margin-top: 4px;">
-                    <div style="color: rgb(0, 0, 0); font-family: Verdana; font-size: 14px; margin-bottom: 8px;"><img style="vertical-align: middle;" src="https://raw.githubusercontent.com/alakiLiu/signatureImg/master/img/phone.png">+86 186805100777</div>
-                    <div style="margin-bottom: 8px;font-size: 14px; "><img id="top-img" style="vertical-align: middle;" src="https://raw.githubusercontent.com/alakiLiu/signatureImg/master/img/skype.png">&nbsp;Jianhao.Chan</div>
+                    <div style="color: rgb(0, 0, 0); font-family: Verdana; font-size: 14px; margin-bottom: 8px;"><img style="vertical-align: middle;" src="img/phone.png">+86 186805100777</div>
+                    <div style="margin-bottom: 8px;font-size: 14px; "><img id="top-img" style="vertical-align: middle;" src="img/skype.png">&nbsp;Jianhao.Chan</div>
                 </div>
             </div>
             <iframe src="activity.html" frameborder="0" scrolling="no" style="margin: 0; padding: 0;"></iframe>
             <div class="logo" style="color: rgb(0, 0, 0); font-family: Verdana; font-size: 17px; padding-top: 8px; clear: both;">
-                <a style="text-decoration: none;" href="http://www.adxmi.com" target="_blank"><img id="adxmi" src="https://raw.githubusercontent.com/alakiLiu/signatureImg/master/img/logo.png"></a>
-                <a style="text-decoration: none;" href="http://www.linkedin.com/company/adxmi" target="_blank"><img src="https://raw.githubusercontent.com/alakiLiu/signatureImg/master/img/linkedin-1.png" style="margin-left:16px;"></a>
-                <a style="text-decoration: none;" href="http://www.facebook.com/adxmi" target="_blank"><img src="https://raw.githubusercontent.com/alakiLiu/signatureImg/master/img/facebook-1.png" style="margin-left:7px;"></a>
-                <a style="text-decoration: none;" href="https://twitter.com/Adxmi_youmi" target="_blank"><img src="https://raw.githubusercontent.com/alakiLiu/signatureImg/master/img/twitter-1.png" style="margin-left:7px;"></a>
-                <a style="text-decoration: none;" href="http://gplus.to/adxmi" target="_blank"><img src="https://raw.githubusercontent.com/alakiLiu/signatureImg/master/img/google-1.png" style="margin-left:7px;"></a>
+                <a style="text-decoration: none;" href="http://www.adxmi.com" target="_blank"><img id="adxmi" src="img/logo.png"></a>
+                <a style="text-decoration: none;" href="http://www.linkedin.com/company/adxmi" target="_blank"><img src="img/linkedin-1.png" style="margin-left:16px;"></a>
+                <a style="text-decoration: none;" href="http://www.facebook.com/adxmi" target="_blank"><img src="img/facebook-1.png" style="margin-left:7px;"></a>
+                <a style="text-decoration: none;" href="https://twitter.com/Adxmi_youmi" target="_blank"><img src="img/twitter-1.png" style="margin-left:7px;"></a>
+                <a style="text-decoration: none;" href="http://gplus.to/adxmi" target="_blank"><img src="img/google-1.png" style="margin-left:7px;"></a>
             </div>
             <p style="color: rgb(0, 0, 0); font-family: Verdana; font-size: 17px; margin: 10px 0px 0px 75px;; ">Specialist of Mobile Promotion &amp; Monetization</p>
         </div>
